--- a/Mafia/Base.lproj/Main.storyboard
+++ b/Mafia/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="a7D-Cm-m2K">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="a7D-Cm-m2K">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -249,7 +249,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Наступает ночь" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lrI-62-CSJ">
-                                <rect key="frame" x="126" y="635" width="124.5" height="30"/>
+                                <rect key="frame" x="127.5" y="635" width="122" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="qFv-GX-DaQ"/>
                                 </constraints>
@@ -933,15 +933,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xta-Jn-j5V">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xta-Jn-j5V">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="F5K-P5-yfW" kind="embed" id="HPb-NN-h8h"/>
                                 </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="xta-Jn-j5V" secondAttribute="trailing" id="GXn-Cy-sm3"/>
+                            <constraint firstItem="xta-Jn-j5V" firstAttribute="leading" secondItem="tv9-sO-ymx" secondAttribute="leading" id="VgK-f8-Nge"/>
+                            <constraint firstItem="xta-Jn-j5V" firstAttribute="top" secondItem="WBV-79-w2p" secondAttribute="bottom" id="ZLM-Ms-yhH"/>
+                            <constraint firstItem="6sD-vm-vZ0" firstAttribute="top" secondItem="xta-Jn-j5V" secondAttribute="bottom" id="uIq-FH-aQU"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Рейтинг" id="RGv-Fj-WWR">
                         <barButtonItem key="leftBarButtonItem" title="Назад" id="KiT-4Z-sY0">
@@ -1574,7 +1579,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Наступает день" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QtF-Nr-V7k">
-                                <rect key="frame" x="125" y="629" width="125" height="30"/>
+                                <rect key="frame" x="126" y="629" width="123" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="HDy-fV-Bjo"/>
                                 </constraints>
@@ -2513,7 +2518,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="Du6-zH-IyD"/>
         <segue reference="0BP-Mc-r4R"/>
-        <segue reference="q4y-1V-dvO"/>
+        <segue reference="HPb-NN-h8h"/>
         <segue reference="KaB-mj-Enm"/>
     </inferredMetricsTieBreakers>
 </document>
